--- a/.github/workflows/azure-functions-app-python.yml
+++ b/.github/workflows/azure-functions-app-python.yml
@@ -46,7 +46,7 @@ jobs:
       with:
         python-version: ${{ env.PYTHON_VERSION }}
 
-    - name: 'Resolve Project Dependencies Using Pip'
+    - name: 'Resolve Projects Dependencies Using Pip'
       shell: bash
       run: |
         pushd './${{ env.AZURE_FUNCTIONAPP_PACKAGE_PATH }}'
